# secp256k1-arkworks

./: .gitignore  Cargo.toml
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/curve/: mod.rs
utils/src/curve/secp256k1/: fq.rs  fr.rs  group.rs  mod.rs  tests.rs
