[package]
edition = "2021"
name = "utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = {version = "0.3.0", features = ["parallel"]}
ark-ff = {version = "0.3.0", features = ["parallel", "asm"]}
ark-std = {version = "0.3.0", default-features = false}

digest = "0.10.3"
rand_chacha = {version = "0.3.1"}
sha2 = {version = "0.10.2", default-features = false}

[dev-dependencies]
ark-relations = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", default-features = false }
ark-algebra-test-templates = { version = "0.3.0", default-features = false }
ark-std = {version = "0.3.0"}
rand = { version = "0.8.0", default-features = false }
